# nechto

./: pyproject.toml  pyrightconfig.json  requirements.txt
output/: deskar_catalog.xlsx
src/deskar/: __init__.py  __main__.py  cli.py  config.py  excel_builder.py  image_processing.py  main.py  models.py  pdf_processor.py
